# mcp-grpc-transport-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: timeout.md  version_negotiation.md
examples/simple_resource/: client.py  server.py
examples/simple_tool/: client.py  server.py
src/mcp_grpc_transport/client/: __init__.py  client_transport_session.py  grpc_client_session.py
src/mcp_grpc_transport/server/: __init__.py  grpc_context.py  grpc_server.py  grpc_session.py
src/mcp_grpc_transport/utils/: convert_types.py  version_utils.py
tests/: test_client_call_tool_rpc.py  test_client_list_resources_and_templates.py  test_client_list_tools_rpc.py  test_client_read_resource_rpc.py  test_client_version_negotiation.py  test_e2e_call_tool_rpc.py  test_e2e_call_tool_rpc_pytest.py  test_e2e_dynamic_call_tool.py  test_e2e_list_resources_and_templates.py  test_e2e_list_tools_rpc.py  test_e2e_read_resource_rpc.py  test_e2e_version_negotiation.py  test_examples_e2e.py  test_server_call_tool_rpc.py  test_server_creation.py  test_server_list_resources_and_templates.py  test_server_list_tools_rpc.py  test_server_read_resource_rpc.py  test_server_version_checks.py  test_utils.py
