[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-grpc-transport"
version = "0.0.1"
description = "Model Context Protocol with gRPC Transport"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "The MCP-gRPC Authors", email = "grpc-packages@google.com" },
]
keywords = ["git", "mcp", "llm", "automation", "grpc"]
license = "MIT"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/GoogleCloudPlatform/mcp-grpc-transport-py"
"Bug Tracker" = "https://github.com/GoogleCloudPlatform/mcp-grpc-transport-py/issues"
